--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,85 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+
+html {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	min-height: 100vh;
+}
 
 body {
-  background: #606061;
+	background-image: linear-gradient(120deg, #46f7bc, #97ee33);
+	color: #fff;
+	font-family: "Orbitron", sans-serif;
 }
+
+header {
+	font-size: 2rem;
+}
+
+header,
+form {
+	min-height: 20vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.todo-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.todo-list {
+	min-width: 30%;
+	list-style: none;
+}
+
+.todo {
+	margin: 0.5rem;
+	background: wheat;
+	color: #333;
+	font-size: 1.5rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	transition: all 0.6s ease-in-out;
+}
+.todo li {
+	flex: 1;
+}
+
+.complete-btn,
+.trash-btn {
+	background: #152008;
+	color: #fff;
+	border: none;
+	padding: 1rem;
+	font-size: 1rem;
+	cursor: pointer;
+}
+.complete-btn {
+	background: #055c3f;
+}
+
+.todo-item {
+	padding: 0 0.5rem;
+}
+.fa-trash,
+.fa-check {
+	pointer-events: none;
+}
+
+.completed {
+	text-decoration: line-through;
+	opacity: 0.6;
+}
+.fall {
+	transform: translateY(8rem) rotateZ(20deg);
+	opacity: 0;
+}
+
+// select {
+// 	appearance: none outline none;
+// 	border: none;
+// }
